# urca

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: website.yml
docs/source/: conf.py  index.rst  utilities.rst
docs/source/api/: common.rst  utilities.rst
docs/source/api/blocks/: baksheesh.rst  gift.rst  index.rst  present.rst  simeck.rst  simon.rst  speck.rst
docs/source/blocks/: present.rst  speck.rst
docs/source/guide/: developer.rst  user.rst
docs/source/notes/: references.bib  references.rst
docs/source/notes/blocks/: baksheesh.rst  gift.rst  index.rst  present.rst  simeck.rst  simon.rst  speck.rst
src/urca/: common.py  constants.py  utilities.py
src/urca/blocks/: present.py  speck.py
src/urca/cpu/: block.py  utilities.py
src/urca/cpu/blocks/: baksheesh.py  gift.py  present.py  simeck.py  simon.py  speck.py
src/urca/gpu/: block.py  utilities.py
src/urca/gpu/blocks/: baksheesh.py  gift.py  present.py  simeck.py  simon.py  speck.py
tests/blocks/: speck_test.py
tests/cpu/blocks/: cpu_baksheesh_test.py  cpu_gift_test.py  cpu_present_test.py  present_test.py  simeck_test.py  simon_test.py  speck_test.py
tests/gpu/blocks/: gpu_baksheesh_test.py  gpu_gift_test.py  gpu_present_test.py  gpu_speck_test.py  present_test.py  simeck_test.py  simon_test.py  speck_test.py
