[project]
name = "urca"
version = "0.1.0"
dependencies = ["numpy"]
authors = [
  { name="Alessandro De Piccoli", email="alessandro.depiccoli@unimi.it" },
]
maintainers = [
  { name="Alessandro De Piccoli", email="alessandro.depiccoli@unimi.it" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
description = "Unified Resource for Cryptographic Arrays"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
dev = [
  "commitizen",
  "pytest",
  "pytest-xdist",
  "sphinx",
  "sphinx-rtd-theme",
  "ruff",
]

[project.urls]
Documentation = "https://ale-depi.github.io/urca/"
Changelog = "https://github.com/ale-depi/urca/blob/main/CHANGELOG.md"
Issues = "https://github.com/ale-depi/urca/issues"
Repository = "https://github.com/ale-depi/urca"

[tool.ruff]
line-length = 100

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true

